crates/ruff_python_parser/tests/snapshots/invalid_syntax@from_import_missing_module.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/from_import_missing_module.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            4,
        ),
        range: 0..19,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(
                        0,
                    ),
                    range: 0..4,
                    module: None,
                    names: [],
                    level: 0,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(
                        3,
                    ),
                    range: 5..18,
                    module: None,
                    names: [
                        Alias {
                            range: 17..18,
                            node_index: NodeIndex(
                                2,
                            ),
                            name: Identifier {
                                id: Name("x"),
                                range: 17..18,
                                node_index: NodeIndex(
                                    1,
                                ),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | from
  |     ^ Syntax Error: Expected a module name
2 | from import x
  |


  |
1 | from
2 | from import x
  |      ^^^^^^ Syntax Error: Expected a module name
  |
